terraform/network.tf

resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-leagueofservices"
  address_space       = ["10.0.0.0/16"] 
  
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_subnet" "subnet" {
  name                 = "subnet-default"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"] 
}

resource "azurerm_public_ip" "pip" {
  name                = "pip-vm-leagueofservices"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Static"
  sku                 = "Standard" 
}
